--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,3 +1,6 @@
+FROM ubuntu
+MAINTAINER Edward
+RUN apt-update
 RUN apt install software-properties-common ca-certificates lsb-release apt-transport-https -y
 RUN LC_ALL=C.UTF-8 add-apt-repository ppa:ondrej/php -y
 RUN apt update
