--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -4,8 +4,11 @@ RUN apt update
 RUN apt install software-properties-common ca-certificates lsb-release apt-transport-https -y
 RUN LC_ALL=C.UTF-8 add-apt-repository ppa:ondrej/php -y
 RUN apt update
+RUN apt update && \
+    apt install -yq tzdata && \
+    ln -fs /usr/share/zoneinfo/America/Bogota /etc/localtime && \
+    dpkg-reconfigure -f noninteractive tzdata
 RUN apt install php7.4 -y
-RUN apt install php7.4-{bcmath,fpm,xml,mysql,zip,intl,ldap,gd,cli,bz2,curl,mbstring,pgsql,opcache,soap,cgi} -y
 RUN apt install apache2 libapache2-mod-php7.4 -y
 RUN apt install systemctl -y
 RUN mkdir -p  /var/www/html/php
